package domain.enums;

public enum ReminderMethod {
    EMAIL,
    SMS,
    PUSH
}
