package domain.enums;

public enum ReservationStatus {
    PENDING,
    CONFIRMED,
    CANCELLED
}
