package domain.enums;

public enum Role {
    ADMIN,
    STAFF,
    CLIENT
}
